--- a/source/markup/new-header.html
+++ b/source/markup/new-header.html
@@ -942,6 +942,42 @@
 						alt="Логотип компании Bithoven"
 					>
 				</a>
+				<div class="c-main-header__box">
+					<div class="c-main-header__user">
+						<img class="c-main-header__user-image" src="https://picsum.photos/200/300" width="24" height="24" alt="">
+						<span class="c-main-header__user-text">
+							[Vip]
+						</span>
+					</div>
+					<button
+						class="c-main-header__button"
+						type="button"
+					>
+						<span class="c-main-header__button-text">ru</span>
+					</button>
+					<form
+						class="c-main-header__form"
+						action=""
+						method=""
+					>
+						<input
+							class="c-main-header__form-input"
+							type="text"
+							name="website_search"
+						>
+						<button
+							class="c-main-header__form-reset"
+							type="button"
+						>
+							<svg width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M5.5 4.27797L9.77797 0L11 1.22203L6.72203 5.5L11 9.77797L9.77797 11L5.5 6.72203L1.22203 11L0 9.77797L4.27797 5.5L0 1.22203L1.22203 0L5.5 4.27797Z" fill="white"/>
+							</svg>
+							<span class="visually-hidden">
+								Сбросить значение формы
+							</span>
+						</button>
+					</form>
+				</div>
 				<a
 					class="button button_color_yellow"
 					href="/auth.html"
