--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -741,63 +741,66 @@
 				Ваш универсальный путеводитель в мире криптовалют
 			</p>
 
-		 <div class="hero__icon-wrapper hero__icon-wrapper_subject_metamask">
+			<div class="hero__icon-wrapper hero__icon-wrapper_subject_metamask">
 				<a class="hero__link-wallet hero__link-wallet_subject_metamask" href="#"></a>
 				<span class="hero__span">
 					Vote (1549)
 				</span>
 			</div>
-
-			
-		<!--		<span class="hero__span  hero__span-svg hero__span_name_gambiling">
-				Gambiling
-			</span>
-
-			<span class="hero__span hero__span-svg hero__span_name_finance">
+			<span class="hero__span hero__span_subject_finance">
 				Finance
 			</span>
-
-			<a class="hero__link-wallet hero__link-wallet_subject_uni"></a>
-			<span class="hero__span hero__span_name_0">
-				Vote
-			</span>
-
-			<a class="hero__link-wallet hero__link-wallet_subject_curve"></a>
-			<span class="hero__span hero__span_name_842">
-				Vote (842)
-			</span>
-
-			<span class="hero__span hero__span-svg hero__span_name_market">
+			<div class="hero__icon-wrapper hero__icon-wrapper_subject_uni">
+				<a class="hero__link-wallet hero__link-wallet_subject_uni"></a>
+				<span class="hero__span">
+					Vote
+				</span>
+			</div>
+			<div class="hero__icon-wrapper hero__icon-wrapper_subject_curve">
+				<a class="hero__link-wallet hero__link-wallet_subject_curve"></a>
+				<span class="hero__span">
+					Vote (842)
+				</span>
+			</div>
+			<span class="hero__span hero__span_subject_market">
 				MarketPlace
 			</span>
-
-			<a class="hero__link-wallet hero__link-wallet_subject_panke"></a>
-			<span class="hero__span hero__span_name_1548">
-				Vote (1548)
-			</span> -->
+			<span class="hero__span hero__span_subject_gambiling">
+				Gambiling
+			</span>
+			<div class="hero__icon-wrapper hero__icon-wrapper_subject_panke">
+				<a class="hero__link-wallet hero__link-wallet_subject_panke"></a>
+				<span class="hero__span">
+					Vote (1548)
+				</span>
+			</div>
 		</div>
 	</section>
 
 	<section class="slider">
-		<!-- Slider main container -->
+
 		<div class="swiper">
-			<!-- Additional required wrapper -->
+
 			<div class="swiper-wrapper">
-				<!-- Slides -->
+
 				<div class="swiper-slide">
 					<div class="main-card">
-						<div class="link main-card__img slide__img--slide" href="#">
-							<div class="main-card__img-link slide__img-link">
-								<a class="button main-card__button" href="">
-									Основы
-								</a>
-							</div>
-							<h2 class="title main-card__title slider__main-card-title">
+						<a class="link main-card__img-link" href="#">
+							<img class="main-card__img slide__card-img" src="assets/images/main/slider/desktop-img.jpg"
+								alt="Человек входит в метавселенную">
+						</a>
+						<div class="main-card__tag-wrapper slider__card-tag-wrapper">
+							<a class="button main-card__tag" href="">
+								Основы
+							</a>
+						</div>
+						<h2 class="title main-card__title_size_large slider__main-card-title">
+							<a class="link main-card__title-link" href="#">
 								Что такое метавселенная?
-							</h2>
-						</div>
-						<div class="main-card__info slide__info">
-							<p class="text main-card__time">
+							</a>
+						</h2>
+						<div class="main-card__info slider__card-info">
+							<p class="text text_size_small main-card__time">
 								4 минуты
 							</p>
 							<a class="link link_level_new" href="#">
@@ -808,42 +811,27 @@
 				</div>
 
 				<div class="swiper-slide">
+
 					<div class="main-card">
-						<div class="link main-card__img slide__img--slide" href="#">
-							<div class="main-card__img-link slide__img-link">
-								<a class="button main-card__button" href="">
-									Основы
-								</a>
-							</div>
-							<h2 class="title main-card__title slider__main-card-title">
-								Что1 такое метавселенная?
-							</h2>
-						</div>
-						<div class="main-card__info slide__info">
-							<p class="text main-card__time">
-								4 минуты
-							</p>
-							<a class="link link_level_new" href="#">
-								Новичок
+						<a class="link main-card__img-link" href="#">
+							<img class="main-card__img slide__card-img" src="assets/images/main/slider/desktop-img.jpg"
+								alt="Человек входит в метавселенную">
+						</a>
+
+						<div class="main-card__tag-wrapper slider__card-tag-wrapper">
+							<a class="button main-card__tag" href="">
+								Основы
 							</a>
 						</div>
-					</div>
-				</div>
 
-				<div class="swiper-slide">
-					<div class="main-card">
-						<div class="link main-card__img slide__img--slide" href="#">
-							<div class="main-card__img-link slide__img-link">
-								<a class="button main-card__button" href="">
-									Основы
-								</a>
-							</div>
-							<h2 class="title main-card__title slider__main-card-title">
+						<h2 class="title main-card__title_size_large slider__main-card-title">
+							<a class="link main-card__title-link" href="#">
 								Что такое метавселенная?
-							</h2>
-						</div>
-						<div class="main-card__info slide__info">
-							<p class="text main-card__time">
+							</a>
+						</h2>
+
+						<div class="main-card__info slider__card-info">
+							<p class="text text_size_small main-card__time">
 								4 минуты
 							</p>
 							<a class="link link_level_new" href="#">
@@ -853,175 +841,209 @@
 					</div>
 				</div>
 
+				<div class="swiper-slide">
+					<div class="main-card">
+						<a class="link main-card__img-link" href="#">
+							<img class="main-card__img slide__card-img" src="assets/images/main/slider/desktop-img.jpg"
+								alt="Человек входит в метавселенную">
+						</a>
+						<div class="main-card__tag-wrapper slider__card-tag-wrapper">
+							<a class="button main-card__tag" href="">
+								Основы
+							</a>
+						</div>
+						<h2 class="title main-card__title_size_large slider__main-card-title">
+							<a class="link main-card__title-link" href="#">
+								Что такое метавселенная?
+							</a>
+						</h2>
+						<div class="main-card__info slider__card-info">
+							<p class="text text_size_small main-card__time">
+								4 минуты
+							</p>
+							<a class="link link_level_new" href="#">
+								Новичок
+							</a>
+						</div>
+					</div>
+				</div>
 			</div>
-
-			<!-- If we need scrollbar -->
-			<!-- <div class="swiper-scrollbar"></div> -->
 		</div>
-		<!-- If we need navigation buttons -->
 		<div class="swiper-button swiper-button-prev"></div>
-
 		<div class="swiper-button swiper-button-next"></div>
 	</section>
 
-	<section class="last">
-		<div class="container last__container">
-			<div class="last__top">
-				<h2 class="title last__title">
-					Последние выпуски
+	<section class="last container">
+
+
+		<div class="last__top">
+			<h2 class="title title_size_small last__title">
+				Последние выпуски
+			</h2>
+			<a class="link last__link" href="">
+				Смотреть все
+			</a>
+		</div>
+
+		<div class="last__content-top">
+			<div class="main-card item1">
+				<a class="link main-card__img-link" href="#">
+					<img class="main-card__img" src="assets/images/main/last/bakanse-desck.jpg"
+						alt="Человек балансирует в воздухе">
+				</a>
+				<div class="main-card__tag-wrapper">
+					<a class="button main-card__tag" href="#">
+						Торговля
+					</a>
+				</div>
+				<div class="main-card__info">
+					<p class="text text_size_small main-card__time">
+						5 минут
+					</p>
+					<a class="link link_level_new" href="#">
+						Новичек
+					</a>
+				</div>
+				<h2 class="title main-card__title">
+					<a class="link main-card__title-link" href="#">
+						Как создать хорошо сбалансированный криптопортфель
+					</a>
 				</h2>
-				<a class="link last__link" href="">
-					Смотреть все
+			</div>
+
+			<div class="main-card item2">
+				<a class="link main-card__img-link" href="#">
+					<img class="main-card__img" src="assets/images/main/last/porto-desktop.jpg"
+						alt="Человек балансирует в воздухе">
+				</a>
+				<div class="main-card__tag-wrapper">
+					<a class="button main-card__tag" href="#">
+						Altcoin
+					</a>
+					<a class="button main-card__tag" href="">
+						Defi
+					</a>
+					<a class="button main-card__tag" href="">
+						+3
+					</a>
+				</div>
+				<div class="main-card__info">
+					<p class="text text_size_small main-card__time">
+						7 минут
+					</p>
+					<a class="link link_level_advanced" href="#">
+						Продвинутый
+					</a>
+				</div>
+				<h2 class="title main-card__title">
+					<a class="link main-card__title-link" href="#">
+						Что такое фан-токен ФК «Порту» (PORTO)?
+					</a>
+				</h2>
+			</div>
+
+			<div class="main-card item3 main-card_height_large">
+				<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
+					<a class="button main-card__tag" href="#">
+						Глоссарий
+					</a>
+				</div>
+				<h2 class="title main-card__title">
+					<a class="link main-card__title-link" href="#">
+						Proof of Attendance
+						Protocol (POAP)
+					</a>
+				</h2>
+				<p class="text main-card__text">
+					Протокол, который создает цифровые значки или предметы коллекционирования с использованием технологии
+					блокчейн.
+					В то время как аббревиатура происходит от названия протокола, POAP также используется для описания самих
+					предметов
+					коллекционирования.
+				</p>
+				<a class="link main-card__link-btn" href="">
+					Полное определение
 				</a>
 			</div>
 
-			<div class="last__content-top">
-				<div class="main-card last__main-card item1">
-					<div class="main-card__img last__main-card-img last__img--balanse">
-						<div class="main-card__link last__main-card-link">
-							<a class="button main-card__button" href="#">
-								Торговля
-							</a>
-						</div>
-					</div>
+			<div class="main-card item4 main-card_height_large">
 
-					<div class="main-card__info">
-						<p class="text main-card__time">
-							5 минут
-						</p>
-						<a class="link link_level_new" href="#">
-							Новичек
-						</a>
-					</div>
-
-					<h2 class="title main-card__title">
-						Как создать хорошо сбалансированный криптопортфель
-					</h2>
-				</div>
-
-				<div class="main-card item2">
-					<div class="main-card__img last__main-card-img last__img--porto">
-						<div class="main-card__link last__main-card-link">
-							<a class="button main-card__button" href="#">
-								Altcoin
-							</a>
-							<a class="button main-card__button" href="">
-								Defi
-							</a>
-							<a class="button main-card__button" href="">
-								+3
-							</a>
-						</div>
-					</div>
-					<div class="main-card__info">
-						<p class="text main-card__time">
-							7 минут
-						</p>
-						<a class="link link_level_advanced" href="#">
-							Продвинутый
-						</a>
-					</div>
-					<h2 class="title main-card__title">
-						Что такое фан-токен ФК «Порту» (PORTO)?
-					</h2>
-				</div>
-
-				<div class="main-card item3 study__main-card">
-					<div class="main-card__link">
-						<a class="button main-card__button" href="#">
-							Глоссарий
-						</a>
-					</div>
-					<h2 class="title main-card__title">
-						Proof of Attendance
-						Protocol (POAP)
-					</h2>
-					<p class="text main-card__text">
-						Протокол, который создает цифровые значки или предметы коллекционирования с использованием технологии
-						блокчейн.
-						В то время как аббревиатура происходит от названия протокола, POAP также используется для описания самих
-						предметов
-						коллекционирования.
-					</p>
-					<a class="link main-card__link-btn" href="">
-						Полное определение
+				<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
+					<a class="button main-card__tag" href="#">
+						Altcoin
+					</a>
+					<a class="button main-card__tag" href="#">
+						Defi
 					</a>
 				</div>
 
-				<div class="main-card item4">
-					<div class="main-card__link">
-						<a class="button main-card__button" href="#">
-							Altcoin
-						</a>
-						<a class="button main-card__button" href="#">
-							Defi
-						</a>
-					</div>
-					<h2 class="title main-card__title">
+				<h2 class="title main-card__title">
+					<a class="link main-card__title-link" href="#">
 						Лучшие криптовалютные кошельки для Binance Smart Chain (BSC)
-					</h2>
-					<div class="main-card__info">
-						<p class="text main-card__time">
-							4 минуты
-						</p>
-						<a class="link link_level_new" href="#">
-							Новичок
-						</a>
-					</div>
+					</a>
+				</h2>
+
+				<div class="main-card__info">
+					<p class="text text_size_small main-card__time">
+						4 минуты
+					</p>
+					<a class="link link_level_advanced" href="#">
+						Новичок
+					</a>
+				</div>
+			</div>
+
+			<div class="main-card item5 main-card_height_large">
+				<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
+					<a class="button main-card__tag" href="#">
+						Binance
+					</a>
 				</div>
 
-				<div class="main-card item5">
-					<div class="main-card__link">
-						<a class="button main-card__button" href="#">
-							Binance
-						</a>
-					</div>
-					<h2 class="title main-card__title">
+				<h2 class="title main-card__title">
+					<a class="link main-card__title-link" href="#">
 						Как торговать фьючерсными контрактами ...
-					</h2>
-					<div class="main-card__info">
-						<p class="text main-card__time">
-							4 минуты
-						</p>
-						<a class="link link_level_pro" href="#">
-							Профессионал
-						</a>
-					</div>
+					</a>
+				</h2>
+
+				<div class="main-card__info">
+					<p class="text text_size_small main-card__time">
+						4 минуты
+					</p>
+					<a class="link link_level_pro" href="#">
+						Профессионал
+					</a>
 				</div>
 			</div>
 		</div>
 	</section>
 
-	<section class="event">
-		<div class="container">
-			<div class="event__content">
+	<section class="event container">
 
-				<div class="main-card event__main-card event__main-card--hand">
-					<h2 class="title event__title">
-						Зарабатывайте криптовалюту, изучая блокчейн
-					</h2>
-					<p class="text event__text">
-						Совершенствуйте свои знания о блокчейне, выполняйте тесты и зарабатывайте криптовалюту
-					</p>
-					<button class="button button_color_yellow event__button--smal">
-						Начать
-					</button>
-				</div>
+		<div class="main-card event__main-card event__main-card--hand">
+			<h2 class="title event__title">
+				Зарабатывайте криптовалюту, изучая блокчейн
+			</h2>
+			<p class="text event__text">
+				Совершенствуйте свои знания о блокчейне, выполняйте тесты и зарабатывайте криптовалюту
+			</p>
+			<a class="button button_color_yellow event__button--smal" href="#">
+				Начать
+			</a>
+		</div>
 
-				<div class="main-card event__main-card event__main-card--head">
-					<h2 class="title event__title">
-						Следите за Биткоином
-					</h2>
-					<p class="text event__text">
-						Каждые четыре года вознаграждения в сети Биткоина сокращаются вдвое. Узнайте, зачем это нужно и как это
-						работает, на
-						странице о халвинге.
-					</p>
-					<button class="button button_color_yellow event__button--large">
-						Страница халвинга
-					</button>
-				</div>
-			</div>
+		<div class="main-card event__main-card event__main-card--head">
+			<h2 class="title event__title">
+				Следите за Биткоином
+			</h2>
+			<p class="text event__text">
+				Каждые четыре года вознаграждения в сети Биткоина сокращаются вдвое. Узнайте, зачем это нужно и как это
+				работает, на
+				странице о халвинге.
+			</p>
+			<a class="button button_color_yellow event__button--large" href="#">
+				Страница халвинга
+			</a>
 		</div>
 	</section>
 
@@ -1366,7 +1388,7 @@
 							<input class="subs__form-search" type="text" name="text" placeholder="Введите почту" value=""
 								id="glossarySearch">
 
-							<button class="button button_color_yellow subs__form-button--desktop" type="submit" name="button">
+							<button class="button button_color_yellow subs__form-button-desktop" type="submit" name="button">
 								Подписаться
 							</button>
 						</div>
@@ -1380,7 +1402,7 @@
 
 						</label>
 
-						<button class="button button_color_yellow subs__form-button--mobile" type="submit" name="button">
+						<button class="button button_color_yellow subs__form-button-mobile" type="submit" name="button">
 							Подписаться
 						</button>
 					</form>
