--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -1183,28 +1183,37 @@
 
 				<div class="main-card popular__grid-item3">
 					<div class="main-card__info">
-						<p class="text main-card__time">
+						<p class="text text_size_small main-card__time">
 							4 минуты
 						</p>
 						<a class="link link_level_advanced" href="#">
 							Продвинутый
 						</a>
 					</div>
-					<h2 class="title main-card__title">
-						Как начать работу с Binance Smart за 60 секунд
-					</h2>
-					<div class="main-card__img popular__img--mean">
-						<div class="main-card__link  popular__main-card-link">
-							<a class="button main-card__button" href="#">
-								Торговля
-							</a>
-							<a class="button main-card__button" href="#">
-								Основы
-							</a>
-							<a class="button main-card__button" href="#">
-								+3
-							</a>
-						</div>
+					<a class="link main-card__title-link" href="#">
+						<h2 class="title main-card__title">
+							Как начать работу с Binance Smart за 60 секунд
+						</h2>
+					</a>
+
+					<a class="link main-card__img-link" href="#">
+						<img class="main-card__img main-card__img_size_large" src="assets/images/main/popular/mean-des.jpg"
+							alt="Логотип биржи binance">
+					</a>
+
+					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_none">
+						<a class="button main-card__tag" href="#">
+							Торговля
+						</a>
+						<a class="button main-card__tag" href="#">
+							Основы
+						</a>
+						<a class="button main-card__tag" href="#">
+							Основы
+						</a>
+						<a class="button main-card__tag" href="#">
+							+3
+						</a>
 					</div>
 				</div>
 
