--- a/source/markup/new-header.html
+++ b/source/markup/new-header.html
@@ -29,32 +29,32 @@
 					Закрыть
 				</span>
 			</button>
-			<ul class="c-mobile-info__list reset-list">
-				<li class="c-mobile-info__list-item">
-					<div class="c-mobile-info__list-icon">
-						<svg class="c-mobile-info__list-image" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<ul class="external-list reset-list">
+				<li class="external-list__item">
+					<div class="external-list__icon">
+						<svg class="external-list__image" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path d="M4.58705 6.30315L7.50004 3.39022L10.4145 6.30465L12.1095 4.60965L7.50004 0L2.89212 4.60815L4.58705 6.30315ZM0.000167847 7.49977L1.69522 5.80471L3.39016 7.49966L1.69512 9.1947L0.000167847 7.49977ZM4.58705 8.69685L7.50004 11.6098L10.4145 8.69543L12.1104 10.3895L12.1095 10.3904L7.50004 15L2.89197 10.392L2.88957 10.3896L4.58705 8.69685ZM11.6102 7.5007L13.3053 5.80565L15.0002 7.50059L13.3052 9.19565L11.6102 7.5007Z" fill="#F9E312"/>
 					</svg>
 					</div>
-					<a class="c-mobile-info__list-text" href="#">
+					<a class="external-list__text" href="#">
 						Обмен
 					</a>
-					<p class="c-mobile-info__list-paragraph">
+					<p class="external-list__paragraph">
 						Блокчейн и обмен криптоактивами
 					</p>
 				</li>
 
-				<li class="c-mobile-info__list-item">
-					<div class="c-mobile-info__list-icon">
-						<svg class="c-mobile-info__list-item" width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<li class="external-list__item">
+					<div class="external-list__icon">
+						<svg class="external-list__item" width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M12.3002 10.7045L8.88951 4.39467V0.635744C8.88951 0.281983 8.59356 0 8.24008 0H4.75879C4.40502 0 4.11392 0.281983 4.11392 0.635744V4.39467L0.700422 10.7045C0.440081 11.1856 0.453183 11.7698 0.733179 12.2401C1.01317 12.7098 1.52104 13 2.06793 13H10.9307C11.4775 13 11.9866 12.7098 12.2665 12.2401C12.5463 11.7698 12.5605 11.1856 12.3002 10.7045ZM7.06313 8.06472C7.36876 8.06472 7.61628 8.31224 7.61628 8.61787C7.61628 8.92321 7.36819 9.17101 7.06313 9.17101C6.75778 9.17101 6.50997 8.92321 6.50997 8.61787C6.50997 8.3131 6.7575 8.06472 7.06313 8.06472ZM5.50763 4.73874C5.81326 4.73874 6.06078 4.98655 6.06078 5.29217C6.06078 5.59751 5.81326 5.84531 5.50763 5.84531C5.202 5.84531 4.95447 5.59751 4.95447 5.29217C4.95476 4.98655 5.202 4.73874 5.50763 4.73874ZM5.50763 6.6699C6.00268 6.6699 6.4043 7.07151 6.4043 7.56627C6.4043 8.0613 6.00268 8.46263 5.50763 8.46263C5.0123 8.46263 4.61096 8.0613 4.61096 7.56627C4.61096 7.07123 5.0123 6.6699 5.50763 6.6699ZM10.6569 11.2685C10.5419 11.4645 10.3314 11.5801 10.1049 11.5801H2.89367C2.66694 11.5801 2.45673 11.4645 2.34166 11.2685C2.22658 11.0725 2.22345 10.8333 2.33368 10.6345L3.20044 9.07644C3.32406 8.85371 3.56788 8.7261 3.82139 8.75031C4.97242 8.85997 6.26615 9.84464 7.42231 9.80077C8.04155 9.77713 8.61635 9.55154 9.16381 9.24991C9.47286 9.07901 9.86166 9.19095 10.0331 9.4997L10.6652 10.6339C10.7749 10.833 10.772 11.0728 10.6569 11.2685Z" fill="#F9E312"/>
 </svg>
 
 					</div>
-					<a class="c-mobile-info__list-text" href="#">
+					<a class="external-list__text" href="#">
 						Лаборатория
 					</a>
-					<p class="c-mobile-info__list-paragraph">
+					<p class="external-list__paragraph">
 						Инкубатор для топовых блокчейн-проектов
 					</p>
 				</li>
@@ -915,7 +915,84 @@
 					class="c-main-header__button"
 					type="button"
 				>
+					<svg width="22" height="22" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path fill="#fff" d="M0 0h5.882v5.882H0zM0 7.882h5.882v5.882H0zM0 15.765h5.882v5.882H0zM7.882 0h5.882v5.882H7.882zM7.882 7.882h5.882v5.882H7.882zM7.882 15.765h5.882v5.882H7.882zM15.765 0h5.882v5.882h-5.882zM15.765 7.882h5.882v5.882h-5.882zM15.765 15.765h5.882v5.882h-5.882z"/></svg>
+					<span class="visually-hidden">
+						Дополнительные ресурсы
+					</span>
+						<div class="c-main-header__submenu c-main-header__submenu_type_external">
+						<div class="c-main-header__submenu-wrapper c-main-header__submenu-wrapper_type_external">
+								<ul class="c-main-header__external external-list reset-list">
+									<li class="external-list__item">
+										<div class="external-list__icon">
+											<svg class="external-list__image" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path d="M4.58705 6.30315L7.50004 3.39022L10.4145 6.30465L12.1095 4.60965L7.50004 0L2.89212 4.60815L4.58705 6.30315ZM0.000167847 7.49977L1.69522 5.80471L3.39016 7.49966L1.69512 9.1947L0.000167847 7.49977ZM4.58705 8.69685L7.50004 11.6098L10.4145 8.69543L12.1104 10.3895L12.1095 10.3904L7.50004 15L2.89197 10.392L2.88957 10.3896L4.58705 8.69685ZM11.6102 7.5007L13.3053 5.80565L15.0002 7.50059L13.3052 9.19565L11.6102 7.5007Z" fill="#F9E312"/>
+										</svg>
+										</div>
+										<a class="external-list__text" href="#">
+											Обмен
+										</a>
+										<p class="external-list__paragraph">
+											Блокчейн и обмен криптоактивами
+										</p>
+									</li>
+
+									<li class="external-list__item">
+										<div class="external-list__icon">
+											<svg class="external-list__item" width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M12.3002 10.7045L8.88951 4.39467V0.635744C8.88951 0.281983 8.59356 0 8.24008 0H4.75879C4.40502 0 4.11392 0.281983 4.11392 0.635744V4.39467L0.700422 10.7045C0.440081 11.1856 0.453183 11.7698 0.733179 12.2401C1.01317 12.7098 1.52104 13 2.06793 13H10.9307C11.4775 13 11.9866 12.7098 12.2665 12.2401C12.5463 11.7698 12.5605 11.1856 12.3002 10.7045ZM7.06313 8.06472C7.36876 8.06472 7.61628 8.31224 7.61628 8.61787C7.61628 8.92321 7.36819 9.17101 7.06313 9.17101C6.75778 9.17101 6.50997 8.92321 6.50997 8.61787C6.50997 8.3131 6.7575 8.06472 7.06313 8.06472ZM5.50763 4.73874C5.81326 4.73874 6.06078 4.98655 6.06078 5.29217C6.06078 5.59751 5.81326 5.84531 5.50763 5.84531C5.202 5.84531 4.95447 5.59751 4.95447 5.29217C4.95476 4.98655 5.202 4.73874 5.50763 4.73874ZM5.50763 6.6699C6.00268 6.6699 6.4043 7.07151 6.4043 7.56627C6.4043 8.0613 6.00268 8.46263 5.50763 8.46263C5.0123 8.46263 4.61096 8.0613 4.61096 7.56627C4.61096 7.07123 5.0123 6.6699 5.50763 6.6699ZM10.6569 11.2685C10.5419 11.4645 10.3314 11.5801 10.1049 11.5801H2.89367C2.66694 11.5801 2.45673 11.4645 2.34166 11.2685C2.22658 11.0725 2.22345 10.8333 2.33368 10.6345L3.20044 9.07644C3.32406 8.85371 3.56788 8.7261 3.82139 8.75031C4.97242 8.85997 6.26615 9.84464 7.42231 9.80077C8.04155 9.77713 8.61635 9.55154 9.16381 9.24991C9.47286 9.07901 9.86166 9.19095 10.0331 9.4997L10.6652 10.6339C10.7749 10.833 10.772 11.0728 10.6569 11.2685Z" fill="#F9E312"/>
+					</svg>
+
+										</div>
+										<a class="external-list__text" href="#">
+											Лаборатория
+										</a>
+										<p class="external-list__paragraph">
+											Инкубатор для топовых блокчейн-проектов
+										</p>
+									</li>
+								</ul>
+						</div>
+					</div>
+				</button>
+				<button
+					class="c-main-header__button"
+					type="button"
+				>
 					Узнать
+					<div class="c-main-header__submenu c-main-header__submenu_type_external">
+						<div class="c-main-header__submenu-wrapper c-main-header__submenu-wrapper_type_external">
+								<ul class="c-main-header__external external-list reset-list">
+									<li class="external-list__item">
+										<div class="external-list__icon">
+											<svg class="external-list__image" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path d="M4.58705 6.30315L7.50004 3.39022L10.4145 6.30465L12.1095 4.60965L7.50004 0L2.89212 4.60815L4.58705 6.30315ZM0.000167847 7.49977L1.69522 5.80471L3.39016 7.49966L1.69512 9.1947L0.000167847 7.49977ZM4.58705 8.69685L7.50004 11.6098L10.4145 8.69543L12.1104 10.3895L12.1095 10.3904L7.50004 15L2.89197 10.392L2.88957 10.3896L4.58705 8.69685ZM11.6102 7.5007L13.3053 5.80565L15.0002 7.50059L13.3052 9.19565L11.6102 7.5007Z" fill="#F9E312"/>
+										</svg>
+										</div>
+										<a class="external-list__text" href="#">
+											Обмен
+										</a>
+										<p class="external-list__paragraph">
+											Блокчейн и обмен криптоактивами
+										</p>
+									</li>
+
+									<li class="external-list__item">
+										<div class="external-list__icon">
+											<svg class="external-list__item" width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M12.3002 10.7045L8.88951 4.39467V0.635744C8.88951 0.281983 8.59356 0 8.24008 0H4.75879C4.40502 0 4.11392 0.281983 4.11392 0.635744V4.39467L0.700422 10.7045C0.440081 11.1856 0.453183 11.7698 0.733179 12.2401C1.01317 12.7098 1.52104 13 2.06793 13H10.9307C11.4775 13 11.9866 12.7098 12.2665 12.2401C12.5463 11.7698 12.5605 11.1856 12.3002 10.7045ZM7.06313 8.06472C7.36876 8.06472 7.61628 8.31224 7.61628 8.61787C7.61628 8.92321 7.36819 9.17101 7.06313 9.17101C6.75778 9.17101 6.50997 8.92321 6.50997 8.61787C6.50997 8.3131 6.7575 8.06472 7.06313 8.06472ZM5.50763 4.73874C5.81326 4.73874 6.06078 4.98655 6.06078 5.29217C6.06078 5.59751 5.81326 5.84531 5.50763 5.84531C5.202 5.84531 4.95447 5.59751 4.95447 5.29217C4.95476 4.98655 5.202 4.73874 5.50763 4.73874ZM5.50763 6.6699C6.00268 6.6699 6.4043 7.07151 6.4043 7.56627C6.4043 8.0613 6.00268 8.46263 5.50763 8.46263C5.0123 8.46263 4.61096 8.0613 4.61096 7.56627C4.61096 7.07123 5.0123 6.6699 5.50763 6.6699ZM10.6569 11.2685C10.5419 11.4645 10.3314 11.5801 10.1049 11.5801H2.89367C2.66694 11.5801 2.45673 11.4645 2.34166 11.2685C2.22658 11.0725 2.22345 10.8333 2.33368 10.6345L3.20044 9.07644C3.32406 8.85371 3.56788 8.7261 3.82139 8.75031C4.97242 8.85997 6.26615 9.84464 7.42231 9.80077C8.04155 9.77713 8.61635 9.55154 9.16381 9.24991C9.47286 9.07901 9.86166 9.19095 10.0331 9.4997L10.6652 10.6339C10.7749 10.833 10.772 11.0728 10.6569 11.2685Z" fill="#F9E312"/>
+					</svg>
+
+										</div>
+										<a class="external-list__text" href="#">
+											Лаборатория
+										</a>
+										<p class="external-list__paragraph">
+											Инкубатор для топовых блокчейн-проектов
+										</p>
+									</li>
+								</ul>
+						</div>
+					</div>
 				</button>
 				<button
 					class="c-main-header__button"
@@ -923,11 +1000,13 @@
 				>
 					Темы
 					<div class="c-main-header__submenu">
+						<div class="c-main-header__submenu-wrapper">
 						<a class="c-main-header__submenu-button button" href="#">Altcoin</a>
 						<a class="c-main-header__submenu-button button" href="#">Altcoin</a>
 						<a class="c-main-header__submenu-button button" href="#">Altcoin</a>
 						<a class="c-main-header__submenu-button button" href="#">Altcoin</a>
 						<a class="c-main-header__submenu-button button" href="#">Altcoin</a>
+						</div>
 					</div>
 				</button>
 				<a
@@ -954,6 +1033,44 @@
 						type="button"
 					>
 						<span class="c-main-header__button-text">ru</span>
+						<div class="c-main-header__submenu">
+							<div class="c-main-header__submenu-wrapper">
+								<ul class="language-switcher reset-list">
+									<li class="language-switcher__item">
+										<a
+											class="language-switcher__link"
+											href="#"
+										>
+											English
+										</a>
+									</li>
+									<li class="language-switcher__item">
+										<a
+											class="language-switcher__link"
+											href="#"
+										>
+											English
+										</a>
+									</li>
+									<li class="language-switcher__item">
+										<a
+											class="language-switcher__link"
+											href="#"
+										>
+											English
+										</a>
+									</li>
+									<li class="language-switcher__item">
+										<a
+											class="language-switcher__link"
+											href="#"
+										>
+											English
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
 					</button>
 					<form
 						class="c-main-header__form"
