--- a/source/markup/new-header.html
+++ b/source/markup/new-header.html
@@ -912,7 +912,7 @@
 		<header class="page__c-main-header c-main-header">
 			<div class="c-main-header__wrapper container">
 				<button
-					class="c-main-header__button"
+					class="c-main-header__button c-main-header__button_type_main"
 					type="button"
 				>
 					<svg width="22" height="22" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path fill="#fff" d="M0 0h5.882v5.882H0zM0 7.882h5.882v5.882H0zM0 15.765h5.882v5.882H0zM7.882 0h5.882v5.882H7.882zM7.882 7.882h5.882v5.882H7.882zM7.882 15.765h5.882v5.882H7.882zM15.765 0h5.882v5.882h-5.882zM15.765 7.882h5.882v5.882h-5.882zM15.765 15.765h5.882v5.882h-5.882z"/></svg>
