--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -968,7 +968,7 @@
 					</div>
 
 					<h2 class="title main-card__title popular__main-card-title ">
-						<a class="link main-card__title-link" href="#"></a>
+						<a class="link main-card__title-link" href="#">
 						История цен биткоина
 						</a>
 					</h2>
@@ -1042,10 +1042,6 @@
 					<form action="" class="study__form" method="post">
 						<input class="study__input" type="text" name="glossary_search" placeholder="Поиск по глоссарию" value=""
 							id="glossarySearch">
-
-						<svg class="form__form-of" width="17" height="17" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#study-search"></use>
-						</svg>
 					</form>
 
 					<h2 class="title study-main-card__title">
